# privacy-filter

./: pyproject.toml
.cache/fontconfig/: fe44ad603488fb7acf454c76fab8a727-le64.cache-9
.cache/matplotlib/: fontlist-v3.11.0.json
examples/scripts/: README.md
examples/scripts/benchmarking/: benchmark_ai4privacy_opf.py
opf/_cli/: common.py
opf/_common/: device.py
opf/_core/: runtime.py
opf/_model/: model.py
opf/_train/: runner.py
opf_ai4privacy_bench_out/: opf_eval_dataset.jsonl  opf_metrics.json  opf_timings.json  summary.json
opf_ai4privacy_bench_out_typed/: opf_eval_dataset.jsonl  opf_metrics.json  opf_timings.json  summary.json
opf_ai4privacy_bench_out_typed/report/: README.md
opf_ai4privacy_bench_review_eval/: opf_eval_dataset.jsonl  opf_metrics.json  opf_timings.json  summary.json
scripts/: init.sh
